Fixed small layout issue by changing padding-bottom to padding-block

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -4,7 +4,7 @@
   color: var(--color-dark-40);
 
   &__body {
-    padding-bottom: fluid(80, 40);
+    padding-block: fluid(80, 40);
     border-bottom: var(--border);
   }
 
